longhorn/traefik-longhorn-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashbboard
  namespace: longhorn-storage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.k3s.ohmidasvn.dev`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: registry-basic-auth
  tls:
    secretName: k3s-ohmidasvn-dev-tls
